Fixed the references file link

--- a/bank_marketing_campaigns_model.ipynb
+++ b/bank_marketing_campaigns_model.ipynb
@@ -27,7 +27,7 @@
    "source": [
     "### Data Set Description\n",
     "\n",
-    "Our dataset comes from the UCI Machine Learning repository [link](https://archive.ics.uci.edu/ml/datasets/bank+marketing).  The data is from a Portugese banking institution and is a collection of the results of multiple marketing campaigns.  We will make use of the article accompanying the dataset [here](CRISP-DM-BANK.pdf) for more information on the data and features.\n",
+    "Our dataset comes from the UCI Machine Learning repository [link](https://archive.ics.uci.edu/ml/datasets/bank+marketing).  The data is from a Portugese banking institution and is a collection of the results of multiple marketing campaigns.  We will make use of the article accompanying the dataset [here](references/CRISP-DM-BANK.pdf) for more information on the data and features.\n",
     "\n"
    ]
   },
